--- a/src/e_cidadania/apps/rosetta/tests/django.po.issue79.template
+++ b/src/e_cidadania/apps/rosetta/tests/django.po.issue79.template
@@ -20,18 +20,8 @@ msgstr ""
 msgid "String 1"
 msgstr ""
 
-msgid "String 2"
-msgstr ""
-
-#. Translators: This is a text of the base template
-#: templates/base.html:43
-msgid "String 3 with comment"
-msgstr ""
-
-msgctxt "Context hint"
-msgid "String 4"
-msgstr ""
-
+#~ msgid "String 2"
+#~ msgstr ""
 
 
 
