--- a/docs/_static/cidadania_black/theme.conf
+++ b/docs/_static/cidadania_black/theme.conf
@@ -1,10 +1,13 @@
 [theme]
 inherit = basic
-stylesheet = flasky.css
+stylesheet = cidadania_black.css
 nosidebar = true
 pygments_style = flask_theme_support.FlaskyStyle
 
 [options]
 index_logo = '../_static/logo.png'
 index_logo_height = 120px
-github_fork = oscarcp/e-cidadania
+showfooter = true
+showlinks = true
+showinfo = true
+github_url = #
