Updated cidadania-black layout and removed debug in conf.py

--- a/docs/_static/cidadania_black/theme.conf
+++ b/docs/_static/cidadania_black/theme.conf
@@ -10,4 +10,4 @@ index_logo_height = 120px
 showfooter = true
 showlinks = true
 showinfo = true
-github_url = #
+github_url = http://github.com/oscarcp/e-cidadania
