Minor fixes to documentation theme

--- a/docs/_templates/cidadania_black/theme.conf
+++ b/docs/_templates/cidadania_black/theme.conf
@@ -5,9 +5,9 @@ nosidebar = true
 pygments_style = flask_theme_support.FlaskyStyle
 
 [options]
-index_logo = '../_static/logo.png'
+index_logo = '../images/logo.png'
 index_logo_height = 120px
 showfooter = true
 showlinks = true
 showinfo = true
-github_url = http://github.com/oscarcp/e-cidadania
+github_url = http://github.com/cidadania/e-cidadania
