Major redesign of the document generation logic.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,7 +3,7 @@
 
 PYTHON = python
 
-.PHONY: all clean html epub latex latexpdf htmlhelp
+.PHONY: all clean html latex latexpdf
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
@@ -12,37 +12,44 @@ PAPER         =
 BUILDDIR      = build
 
 # Internal variables.
-PAPEROPT_a4     = -D latex_paper_size=a4
+PAPEROPT_a4     = -D latex_paper_size=a4paper
 PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees/$(LANG) $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
-SPHINX_DEPENDENCIES = es/Makefile
+SPHINX_DEPENDENCIES = en/Makefile
 
-%/Makefile : en/Makefile
-	$(PYTHON) -c "import shutil; shutil.copyfile('$<, '$@')"
+#%/Makefile : en/Makefile
+#	$(PYTHON) -c "import shutil; shutil.copyfile('$<, '$@')"
 
 # Take in mind that the english is the last to build. This is for readthedocs.org
 # to get the english docs instead of spanish or galician.
 
-html: $(SPHINX_DEPENDENCIES)
-	cd en && make html LANG=gl
-	cd es && make html LANG=es
-	cd gl && make html LANG=en
+help:
+	@echo "Please use \`make <target>' where <target> is one of the supported formats by e-cidadania:"
+	@echo
+	@echo "  html         Make the HTML version of the documentation"
+	@echo "  latex        Make the LaTeX version of the documentation"
+	@echo "  latexpdf     Create the PDF version of the documentation using pdflatex"
+	@echo
+	@echo "This Makefile will generate the documentation for the three official languages of e-cidadania: Spanish, English and Galician."
+	@echo "If you want to build just one of them please use the Makefile inside the language directory."
+	@echo
 
-htmlhelp: $(SPHINX_DEPENDENCIES)
-	cd en && make html LANG=gl
+html: $(SPHINX_DEPENDENCIES)
 	cd es && make html LANG=es
-	cd gl && make html LANG=en
-	
-epub: $(SPHINX_DEPENDENCIES)
-	cd en && make html LANG=gl
-	cd es && make html LANG=es
-	cd gl && make html LANG=en
+	cd gl && make html LANG=gl
+	cd en && make html LANG=en
+
+latex: $(SPHINX_DEPENDENCIES)
+	cd gl && make latex LANG=gl
+	cd es && make latex LANG=es
+	cd en && make latex LANG=en
 
 latexpdf: $(SPHINX_DEPENDENCIES)
-	cd en && make latexpdf LANG=gl
+	cd gl && make latexpdf LANG=gl
 	cd es && make latexpdf LANG=es
-	cd gl && make latexpdf LANG=en
+	cd en && make latexpdf LANG=en
 
 clean:
-	rm -rf $(BUILDDIR)/*
+	rm -rf $(BUILDDIR) 
+	@echo "The build directory has been removed."
