Refactor msg.compose(), fix bugs in Inv/Req from Org->Modules, Survey 72b

--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -26,6 +26,7 @@ gis,location,surveyL3.csv,location.xsl
 #survey,complete,24H_response.csv,complete.xsl
 #survey,complete,72H_response.csv,complete.xsl
 survey,complete,24H-Test-Data.csv,complete.xsl
+survey,complete,72H-Test-Data.csv,complete.xsl
 # Add the layout rules for a template
 survey,formatter,24B(new).xls.Layout.csv,formatter.xsl
 survey,formatter,72B(new).xls.Layout.csv,formatter.xsl
