Fix Layer Folders, WMS Layers prepopped via xsl/csv

--- a/private/prepopulate/default/tasks.cfg
+++ b/private/prepopulate/default/tasks.cfg
@@ -12,6 +12,8 @@
 #     zzz_1st_run
 #     s3Tools::S3BulkImporter
 ##########################################################################
+# GIS Layers
+"gis","layer_wms","gis_layer_wms.csv","layer_wms.xsl"
 "org","sector","org_sector.csv","sector.xsl"
 "supply","catalog_item","DefaultItems.csv","catalog_item.xsl"
 "supply","catalog_item","StandardItems.csv","catalog_item.xsl"
