--- a/private/prepopulate/demo/Standard/tasks.cfg
+++ b/private/prepopulate/demo/Standard/tasks.cfg
@@ -18,7 +18,10 @@
 #############################################################################
 # Add registered users of the system
 auth,user,regression/masterUsers.csv,user.xsl
-# Add locations
+# GIS Layers
+gis,layer_wms,default/gis_layer_wms.csv,layer_wms.xsl
+gis,layer_wms,gis_layer_wms.csv,layer_wms.xsl
+# GIS Locations
 *,gis_import_csv,USA_L1.csv
 *,gis_import_csv,California_L2.csv
 # Add default values for items and skills
