GIS: Prepop all config instead of using deployment_settings & zzz_1st_run

--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -13,6 +13,8 @@
 #     s3Tools::S3BulkImporter
 ##########################################################################
 auth,user,regression/masterUsers.csv,user.xsl
+# GIS Layers
+gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 # Add the survey templates
 survey,question_list,24B(new).xls.Question.csv,question_list.xsl
 survey,question_list,72B(new).xls.Question.csv,question_list.xsl
