--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -27,7 +27,8 @@ gis,config,default/gis_config.csv,config.xsl
 #  Layers
 gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 # Add the survey templates
-survey,question_list,24B(new).xls.Question.csv,question_list.xsl
+# Add the survey templates
+survey,question_list,24B(new).xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment from (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
 survey,question_list,72B(new).xls.Question.csv,question_list.xsl
 #survey,question_list,questionnaire72H.csv,question_list.xsl
 #survey,question_list,questionnaireMRCS.csv,question_list.xsl
