--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -39,7 +39,7 @@ survey,formatter,72B(new).xls.Layout.csv,formatter.xsl
 #survey,formatter,72Hr-B.xls.Layout.csv,formatter.xsl
 #survey,formatter,layoutPMI.csv,formatter.xsl
 # Add the locations used in the responses to the survey
-#gis,location,surveyL3.csv,location.xsl
+gis,location,surveyL3.csv,location.xsl
 # Add the completed responses to the various templates
 #survey,complete,24H_response.csv,complete.xsl
 #survey,complete,72H_response.csv,complete.xsl
