--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -30,18 +30,12 @@ gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.
 # Add the survey templates
 survey,question_list,24B(new).xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment from (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
 survey,question_list,72B(new).xls.Question.csv,question_list.xsl
-#survey,question_list,questionnaire72H.csv,question_list.xsl
-#survey,question_list,questionnaireMRCS.csv,question_list.xsl
-#survey,question_list,questionnairePMI.csv,question_list.xsl
 # Add the layout rules for a template
 survey,formatter,24B(new).xls.Layout.csv,formatter.xsl
 survey,formatter,72B(new).xls.Layout.csv,formatter.xsl
-#survey,formatter,72Hr-B.xls.Layout.csv,formatter.xsl
-#survey,formatter,layoutPMI.csv,formatter.xsl
 # Add the locations used in the responses to the survey
-gis,location,surveyL3.csv,location.xsl
+#gis,location,surveyL3.csv,location.xsl
 # Add the completed responses to the various templates
-#survey,complete,24H_response.csv,complete.xsl
-#survey,complete,72H_response.csv,complete.xsl
 survey,complete,24H-Test-Data.csv,complete.xsl
+survey,complete,24 Hour B Padang Earthquake 2011.csv,complete.xsl
 survey,complete,72H-Test-Data.csv,complete.xsl
