--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -40,7 +40,7 @@ org,office,demo/Standard/office.csv,office.xsl
 # inv,warehouse,warehouse.csv,warehouse.xsl
 # Add some stock to the warehouse
 inv,inv_item,demo/Standard/warehouse_stock.csv,inv_item.xsl
-asset,asset,demo/Standard/office_assets.csv,asset.xsl
+asset,asset,demo/Standard/assets.csv,asset.xsl
 # Let's have some people...
 hrm,person,regression/people.csv,person.xsl
 # Hack because person import stomps all over the location address and level, so reimport the offices
@@ -48,14 +48,16 @@ org,office,demo/Standard/office.csv,office.xsl
 irs,ireport,demo/Standard/ireport.csv,ireport.xsl
 # ADAT
 # Add the survey templates
-survey,question_list,24B(new).xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment from (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
-survey,question_list,72B(new).xls.Question.csv,question_list.xsl
+survey,question_list,24B.xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment form (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
+survey,question_list,72B.xls.Question.csv,question_list.xsl
+survey,question_list,PMI.xls.Question.csv,question_list.xsl
 # Add the layout rules for a template
-survey,formatter,24B(new).xls.Layout.csv,formatter.xsl
-survey,formatter,72B(new).xls.Layout.csv,formatter.xsl
-# Add the locations used in the responses to the survey
-#gis,location,surveyL3.csv,location.xsl
+survey,formatter,24B.xls.Layout.csv,formatter.xsl
+survey,formatter,72B.xls.Layout.csv,formatter.xsl
+survey,formatter,PMI.xls.Layout.csv,formatter.xsl
 # Add the completed responses to the various templates
 survey,complete,24H-Test-Data.csv,complete.xsl
-survey,complete,24 Hour B Padang Earthquake 2011.csv,complete.xsl
-survey,complete,72H-Test-Data.csv,complete.xsl
+survey,complete,Padang Earthquake 2011 (24H B).csv,complete.xsl
+survey,complete,Padang Earthquake 2011 (72H B).csv,complete.xsl
+survey,complete,Padang Earthquake 2011 (PMI).csv,complete.xsl
+survey,complete,Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
