GIS: Break out gis_hierarchy from gis_config, start work on Add/Remove Layers dynamically on map

--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -23,6 +23,7 @@ gis,symbology,default/gis_symbology.csv,symbology.xsl
 gis,marker,default/gis_marker.csv,marker.xsl
 #  Config
 gis,config,default/gis_config.csv,config.xsl
+gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 #  Layers
 gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 # -----------------------------------------------------------------------------
