--- a/private/prepopulate/demo/IFRC/tasks.cfg
+++ b/private/prepopulate/demo/IFRC/tasks.cfg
@@ -13,42 +13,39 @@
 #     zzz_1st_run
 #     s3Tools::S3BulkImporter
 ##########################################################################
-auth,user,regression/masterUsers.csv,user.xsl
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
 #  Symbology
-gis,symbology,demo/IFRC/gis_symbology.csv,symbology.xsl
+gis,symbology,gis_symbology.csv,symbology.xsl
 #  Markers
-gis,marker,demo/IFRC/gis_marker.csv,marker.xsl
+gis,marker,gis_marker.csv,marker.xsl
 # GIS Locations
-gis,location,demo/IFRC/TL_L0.csv,location.xsl
+gis,location,TL_L0.csv,location.xsl
 # GIS Config (refers to Locations)
-gis,config,demo/IFRC/gis_config.csv,config.xsl
-gis,hierarchy,demo/IFRC/gis_hierarchy.csv,hierarchy.xsl
+gis,config,gis_config.csv,config.xsl
+gis,hierarchy,gis_hierarchy.csv,hierarchy.xsl
 #  Layers
-gis,layer_feature,demo/IFRC/gis_layer_feature.csv,layer_feature.xsl
+gis,layer_feature,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 gis,layer_bing,default/gis_layer_bing.csv,layer_bing.xsl
 gis,layer_google,gis_layer_google.csv,layer_google.xsl
 gis,layer_tms,default/gis_layer_tms.csv,layer_tms.xsl
 gis,layer_wms,default/gis_layer_wms.csv,layer_wms.xsl
-gis,layer_wms,demo/IFRC/gis_layer_wms.csv,layer_wms.xsl
 gis,layer_wms,gis_layer_wms.csv,layer_wms.xsl
 gis,layer_georss,demo/Standard/gis_layer_georss.csv,layer_georss.xsl
 gis,layer_coordinate,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 #gis,layer_mgrs,gis_layer_mgrs.csv,layer_mgrs.xsl
 # -----------------------------------------------------------------------------
-# RMS
-org,sector,demo/IFRC/org_sector.csv,sector.xsl
-org,organisation,demo/IFRC/organisation.csv,organisation.xsl
-auth,organisation,demo/IFRC/organisation.csv,organisation.xsl
-hrm,skill,demo/IFRC/SkillList.csv,skill.xsl
-hrm,competency_rating,demo/IFRC/SkillCompetency.csv,competency_rating.xsl
-hrm,course,demo/IFRC/course.csv,course.xsl
-hrm,job_role,demo/IFRC/job_role.csv,job_role.xsl
-asset,asset,asset.csv,asset.xsl
+# Core
+org,sector,org_sector.csv,sector.xsl
+org,organisation,organisation.csv,organisation.xsl
+auth,organisation,organisation.csv,organisation.xsl
+hrm,skill,SkillList.csv,skill.xsl
+hrm,competency_rating,SkillCompetency.csv,competency_rating.xsl
+hrm,course,course.csv,course.xsl
+hrm,job_role,job_role.csv,job_role.xsl
 # -----------------------------------------------------------------------------
 # ADAT
 # Add the survey templates
@@ -59,29 +56,10 @@ survey,question_list,demo/ADAT/PMI.xls.Question.csv,question_list.xsl
 survey,formatter,demo/ADAT/24B.xls.Layout.csv,formatter.xsl
 survey,formatter,demo/ADAT/72B.xls.Layout.csv,formatter.xsl
 survey,formatter,demo/ADAT/PMI.xls.Layout.csv,formatter.xsl
-# Add the completed responses to the various templates
-survey,complete,demo/ADAT/24H-Test-Data.csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
-survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
-"project","activity_type",demo/IFRC/project_activity_type.csv,activity_type.xsl
-"project","hazard",demo/IFRC/project_hazard.csv,hazard.xsl
-"project","theme",demo/IFRC/project_theme.csv,theme.xsl
-"project","beneficiary_type",demo/IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
-# -----------------------------------------------------------------------------
-# Inventory
-org,office,office.csv,office.xsl
-inv,inv_item,warehouse_stock.csv,inv_item.xsl
-# Human Resources
-"hrm","skill",default/DefaultSkillList.csv,"skill.xsl"
-"hrm","competency_rating",default/DefaultSkillCompetency.csv,competency_rating.xsl
-"hrm","person",people.csv,"person.xsl"
-# Projects 
-project,project,project_project.csv,project.xsl
-project,project,project_activity.csv,activity.xsl
-project,project,project_organisation.csv,organisation.xsl
-# Events
-irs,ireport,ireport.csv,ireport.xsl
+"project","activity_type",project_activity_type.csv,activity_type.xsl
+"project","hazard",project_hazard.csv,hazard.xsl
+"project","theme",project_theme.csv,theme.xsl
+"project","beneficiary_type",project_beneficiary_type.csv,beneficiary_type.xsl
+
