Events/Scenarios/Patient -> Modules, Clean up the Models folder some

--- a/private/prepopulate/demo/IFRC/tasks.cfg
+++ b/private/prepopulate/demo/IFRC/tasks.cfg
@@ -62,4 +62,6 @@ survey,formatter,demo/ADAT/PMI.xls.Layout.csv,formatter.xsl
 "project","hazard",project_hazard.csv,hazard.xsl
 "project","theme",project_theme.csv,theme.xsl
 "project","beneficiary_type",project_beneficiary_type.csv,beneficiary_type.xsl
-
+# -----------------------------------------------------------------------------
+# Offices
+org,office,office.csv,office.xsl
