--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -73,6 +73,7 @@ survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.
 "project","beneficiary_type",demo/IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
 # Inventory
+org,office,demo/IFRC/office.csv,office.xsl
 org,office,office.csv,office.xsl
 inv,inv_item,warehouse_stock.csv,inv_item.xsl
 # Human Resources
