enhancments to prepopulate
Now supports multiple prepopualte settings (still all numeric)
Supports the importign of non-system roles
Slightly improved repoprting (with debug deployment setting on)

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /models/0000_update_check.py
 /sessions/*
 /uploads/*
+/private/prepopulate/user/*
 /static/scripts/tools/compiler.jar
 /static/cache/chart/*
 /tests/selenium/results/*
