--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -18,15 +18,15 @@ auth,user,survey_users.csv,user.xsl
 # GIS
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
-#  Symbology
-gis,symbology,default/gis_symbology.csv,symbology.xsl
 #  Markers
 gis,marker,default/gis_marker.csv,marker.xsl
+#  Symbology
+gis,symbology,default/gis_symbology.csv,symbology.xsl
 #  Config
 gis,config,default/gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 #  Layers
-gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
+gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 # -----------------------------------------------------------------------------
 # Add default values for items and skills
 supply,catalog_item,default/StandardItems.csv,catalog_item.xsl
