--- a/private/prepopulate/demo/IFRC/tasks.cfg
+++ b/private/prepopulate/demo/IFRC/tasks.cfg
@@ -17,26 +17,27 @@
 # GIS
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
-#  Symbology
-gis,symbology,gis_symbology.csv,symbology.xsl
 #  Markers
 gis,marker,gis_marker.csv,marker.xsl
+#  Symbology
+gis,symbology,gis_symbology.csv,symbology.xsl
 # GIS Locations
 gis,location,TL_L0.csv,location.xsl
 # GIS Config (refers to Locations)
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,gis_hierarchy.csv,hierarchy.xsl
 #  Layers
-gis,layer_feature,gis_layer_feature.csv,layer_feature.xsl
-gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
-gis,layer_bing,default/gis_layer_bing.csv,layer_bing.xsl
-gis,layer_google,gis_layer_google.csv,layer_google.xsl
-gis,layer_tms,default/gis_layer_tms.csv,layer_tms.xsl
-gis,layer_wms,default/gis_layer_wms.csv,layer_wms.xsl
-gis,layer_wms,gis_layer_wms.csv,layer_wms.xsl
-gis,layer_georss,demo/Standard/gis_layer_georss.csv,layer_georss.xsl
-gis,layer_coordinate,default/gis_layer_coordinate.csv,layer_coordinate.xsl
-#gis,layer_mgrs,gis_layer_mgrs.csv,layer_mgrs.xsl
+gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
+gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
+gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
+gis,layer_config,default/gis_layer_bing.csv,layer_bing.xsl
+gis,layer_config,gis_layer_google.csv,layer_google.xsl
+gis,layer_config,default/gis_layer_tms.csv,layer_tms.xsl
+gis,layer_config,default/gis_layer_wms.csv,layer_wms.xsl
+gis,layer_config,gis_layer_wms.csv,layer_wms.xsl
+gis,layer_config,demo/Standard/gis_layer_georss.csv,layer_georss.xsl
+gis,layer_symbology,demo/Standard/gis_layer_georss.csv,layer_georss.xsl
+gis,layer_cconfig,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 # -----------------------------------------------------------------------------
 # Core
 org,sector,org_sector.csv,sector.xsl
