Fix PrePop Bugs

--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -84,7 +84,7 @@ inv,inv_item,warehouse_stock.csv,inv_item.xsl
 "hrm","person",people.csv,"person.xsl"
 # Projects 
 project,project,project_project.csv,project.xsl
-project,project,project_activity.csv,activity.xsl
-project,project,project_organisation.csv,organisation.xsl
+project,activity,project_activity.csv,activity.xsl
+project,organisation,project_organisation.csv,organisation.xsl
 # Events
 irs,ireport,ireport.csv,ireport.xsl
