--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -60,6 +60,14 @@ auth,user,demo/ADAT/survey_users.csv,user.xsl
 survey,question_list,demo/ADAT/24B.xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment form (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
 survey,question_list,demo/ADAT/72B.xls.Question.csv,question_list.xsl
 survey,question_list,demo/ADAT/PMI.xls.Question.csv,question_list.xsl
+survey,question_list,demo/ADAT/PHT.xls.Question.csv,question_list.xsl
+survey,question_list,"demo/ADAT/DANA Template 1.xls.Question.csv",question_list.xsl
+survey,question_list,"demo/ADAT/DANA Template 2.xls.Question.csv",question_list.xsl
+survey,question_list,"demo/ADAT/DANA Template 3.xls.Question.csv",question_list.xsl
+survey,question_list,"demo/ADAT/DANA Template 4.xls.Question.csv",question_list.xsl
+survey,question_list,"demo/ADAT/DANA Template 5.xls.Question.csv",question_list.xsl
+survey,question_list,"demo/ADAT/Emergency Damage and Needs.xls.Question.csv",question_list.xsl
+survey,question_list,demo/ADAT/MCRS-Annex1.xls.Question.csv,question_list.xsl
 # Add the layout rules for a template
 survey,formatter,demo/ADAT/24B.xls.Layout.csv,formatter.xsl
 survey,formatter,demo/ADAT/72B.xls.Layout.csv,formatter.xsl
