--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -28,6 +28,7 @@ gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 #  Layers
 gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 # -----------------------------------------------------------------------------
+*,import_role,survey_roles.csv
 # Add the survey templates
 survey,question_list,24B.xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment form (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
 survey,question_list,72B.xls.Question.csv,question_list.xsl
