--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -30,15 +30,15 @@ gis,hierarchy,demo/IFRC/gis_hierarchy.csv,hierarchy.xsl
 #  Layers
 gis,layer_config,demo/IFRC/gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,demo/IFRC/gis_layer_feature.csv,layer_feature.xsl
-gis,layer_openstreetmap,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
+gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 gis,layer_config,default/gis_layer_bing.csv,layer_bing.xsl
 gis,layer_config,demo/IFRC/gis_layer_google.csv,layer_google.xsl
 gis,layer_config,default/gis_layer_tms.csv,layer_tms.xsl
 gis,layer_config,default/gis_layer_wms.csv,layer_wms.xsl
 gis,layer_config,demo/IFRC/gis_layer_wms.csv,layer_wms.xsl
 gis,layer_config,gis_layer_wms.csv,layer_wms.xsl
-gis,layer_config,default/gis_layer_georss.csv,layer_georss.xsl
-gis,layer_symbology,default/gis_layer_georss.csv,layer_georss.xsl
+gis,layer_config,demo/IFRC/gis_layer_georss.csv,layer_georss.xsl
+gis,layer_symbology,demo/IFRC/gis_layer_georss.csv,layer_georss.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 # -----------------------------------------------------------------------------
 # RMS
