--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -38,6 +38,8 @@ survey,question_list,"DANA Template 2.xls.Question.csv",question_list.xsl
 survey,question_list,"DANA Template 3.xls.Question.csv",question_list.xsl
 survey,question_list,"DANA Template 4.xls.Question.csv",question_list.xsl
 survey,question_list,"DANA Template 5.xls.Question.csv",question_list.xsl
+survey,question_list,"Emergency Damage and Needs.xls.Question.csv",question_list.xsl
+survey,question_list,"MCRS-Annex1.xls.Question.csv",question_list.xsl
 # Add the layout rules for a template
 survey,formatter,24B.xls.Layout.csv,formatter.xsl
 survey,formatter,72B.xls.Layout.csv,formatter.xsl
@@ -48,6 +50,8 @@ survey,formatter,"DANA Template 2.xls.Layout.csv",formatter.xsl
 survey,formatter,"DANA Template 3.xls.Layout.csv",formatter.xsl
 survey,formatter,"DANA Template 4.xls.Layout.csv",formatter.xsl
 survey,formatter,"DANA Template 5.xls.Layout.csv",formatter.xsl
+survey,formatter,"Emergency Damage and Needs.xls.Layout.csv",formatter.xsl
+survey,formatter,"MCRS-Annex1.xls.Layout.csv",formatter.xsl
 # Add the completed responses to the various templates
 survey,complete,Padang Earthquake 2011 (24H B).csv,complete.xsl
 survey,complete,Padang Earthquake 2011 (72H B).csv,complete.xsl
