--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -103,9 +103,9 @@ survey,formatter,"demo/ADAT/DANA Template 5.xls.Layout.csv",formatter.xsl
 survey,formatter,"demo/ADAT/Emergency Damage and Needs.xls.Layout.csv",formatter.xsl
 survey,question_list,demo/ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 # Add the completed responses to the various templates
-#survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
-#survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
-#survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
-#survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
+survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
+survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
+survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
+survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
 # -----------------------------------------------------------------------------
 
