--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -14,6 +14,7 @@
 #     s3Tools::S3BulkImporter
 ##########################################################################
 auth,user,regression/masterUsers.csv,user.xsl
+*,import_role,roles/project_roles.csv
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
@@ -68,7 +69,8 @@ hrm,skill,default/DefaultSkillList.csv,skill.xsl
 hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
 hrm,person,people.csv,person.xsl
 hrm,training",training.csv,training.xsl
-# Projects 
+# Projects
+auth,user,project_users.csv,user.xsl
 project,project,project_project.csv,project.xsl
 project,activity,project_activity.csv,activity.xsl
 project,organisation,project_organisation.csv,organisation.xsl
@@ -103,9 +105,9 @@ survey,formatter,"demo/ADAT/DANA Template 5.xls.Layout.csv",formatter.xsl
 survey,formatter,"demo/ADAT/Emergency Damage and Needs.xls.Layout.csv",formatter.xsl
 survey,question_list,demo/ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 # Add the completed responses to the various templates
-survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
-survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
+#survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
 # -----------------------------------------------------------------------------
 
