Prepare data for RMS Simulation

--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -87,7 +87,8 @@ project,beneficiary_type,demo/IFRC/project_beneficiary_type.csv,beneficiary_type
 # Inventory
 org,office,demo/IFRC/office.csv,office.xsl
 org,office,office.csv,office.xsl
-inv,inv_item,warehouse_stock.csv,inv_item.xsl
+inv,inv_item,inv_item.csv,inv_item.xsl
+inv,send_item,send_item.csv,send_item.xsl
 # Human Resources
 hrm,skill,default/DefaultSkillList.csv,skill.xsl
 hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
