--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -73,10 +73,10 @@ survey,formatter,demo/ADAT/24B.xls.Layout.csv,formatter.xsl
 survey,formatter,demo/ADAT/72B.xls.Layout.csv,formatter.xsl
 survey,formatter,demo/ADAT/PMI.xls.Layout.csv,formatter.xsl
 # Add the completed responses to the various templates
-survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
-survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
-survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
+survey,complete,24H-TL-Data.csv,complete.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
 project,activity_type,demo/IFRC/project_activity_type.csv,activity_type.xsl
