--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -79,7 +79,7 @@ asset,asset,asset.csv,asset.xsl
 hrm,skill,default/DefaultSkillList.csv,skill.xsl
 hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
 hrm,person,people.csv,person.xsl
-hrm,training",training.csv,training.xsl
+hrm,training,training.csv,training.xsl
 # Projects
 project,project,project_project.csv,project.xsl
 project,activity,project_activity.csv,activity.xsl
