Tweaks, inc Improved error reporting in BulkImporter, upgrading Cluetip to support themeroller themes, Option to set the person-controller for lookups in AddPersonWidget

--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -56,8 +56,8 @@ gis,location,TL_L3.csv,location.xsl
 org,sector,demo/IFRC/org_sector.csv,sector.xsl
 org,organisation,demo/IFRC/organisation.csv,organisation.xsl
 auth,organisation,demo/IFRC/organisation.csv,organisation.xsl
-hrm,skill,demo/IFRC/SkillList.csv,skill.xsl
-hrm,competency_rating,demo/IFRC/SkillCompetency.csv,competency_rating.xsl
+#hrm,skill,demo/IFRC/SkillList.csv,skill.xsl
+#hrm,competency_rating,demo/IFRC/SkillCompetency.csv,competency_rating.xsl
 hrm,course,demo/IFRC/course.csv,course.xsl
 hrm,job_role,demo/IFRC/job_role.csv,job_role.xsl
 # -----------------------------------------------------------------------------
