improved rHeader handling in PDF with html2pdf class

--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -77,7 +77,7 @@ project,beneficiary_type,demo/IFRC/project_beneficiary_type.csv,beneficiary_type
 org,office,demo/IFRC/office.csv,office.xsl
 org,office,office.csv,office.xsl
 inv,inv_item,inv_item.csv,inv_item.xsl
-inv,send_item,send_item.csv,send_item.xsl
+inv,track_item,demo/Shipment/track_item.csv,track_item.xsl
 # Assets
 asset,asset,asset.csv,asset.xsl
 # Human Resources
