Facebook & Google OAuth logins (backported from cedarbluff). LinkedIn added to enhanced social_share buttons

--- a/static/scripts/tools/sahana.css.cfg
+++ b/static/scripts/tools/sahana.css.cfg
@@ -11,6 +11,7 @@ S3/jquery.ui.datepicker.css
 S3/jquery.ui.timepicker.css
 S3/jquery.ui.theme.css
 S3/ui.multiselect.css
+S3/zocial.css
 S3/ajaxS3.css
 T2/t2.css
 web2py/calendar.css
