GIS: Organisational Configs working

--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -16,9 +16,15 @@
 # Roles
 *,import_role,demo/IFRC/auth_roles.csv
 *,import_role,demo/ADAT/survey_roles.csv
-# Users -----------------------------------------------------------------------
+# -----------------------------------------------------------------------------
+# Users
 auth,user,regression/masterUsers.csv,user.xsl
 auth,user,users.csv,user.xsl
+# -----------------------------------------------------------------------------
+# Org
+org,sector,demo/IFRC/org_sector.csv,sector.xsl
+org,organisation,demo/IFRC/organisation.csv,organisation.xsl
+auth,organisation,demo/IFRC/organisation.csv,organisation.xsl
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
@@ -31,7 +37,6 @@ gis,symbology,demo/IFRC/gis_symbology.csv,symbology.xsl
 gis,location,demo/IFRC/TL_L0.csv,location.xsl
 # GIS Config (refers to Locations)
 gis,config,demo/IFRC/gis_config.csv,config.xsl
-gis,config,gis_config.csv,config.xsl
 gis,hierarchy,demo/IFRC/gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
 gis,location,TL_L1.csv,location.xsl
@@ -56,11 +61,7 @@ gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 gis,layer_config,gis_layer_theme.csv,layer_theme.xsl
 gis,theme_data,gis_theme_data.csv,theme_data.xsl
 # -----------------------------------------------------------------------------
-# RMS
-org,sector,demo/IFRC/org_sector.csv,sector.xsl
-org,organisation,demo/IFRC/organisation.csv,organisation.xsl
-auth,organisation,demo/IFRC/organisation.csv,organisation.xsl
-org,facility,facility.csv,facility.xsl
+# HRM
 #hrm,skill,demo/IFRC/SkillList.csv,skill.xsl
 #hrm,competency_rating,demo/IFRC/SkillCompetency.csv,competency_rating.xsl
 hrm,course,demo/IFRC/course.csv,course.xsl
@@ -68,6 +69,7 @@ hrm,job_role,demo/IFRC/job_role.csv,job_role.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
 *,import_role,roles/project_roles.csv
+org,facility,facility.csv,facility.xsl
 project,activity_type,demo/IFRC/project_activity_type.csv,activity_type.xsl
 project,hazard,demo/IFRC/project_hazard.csv,hazard.xsl
 project,theme,demo/IFRC/project_theme.csv,theme.xsl
@@ -121,9 +123,10 @@ survey,formatter,"demo/ADAT/Emergency Damage and Needs.xls.Layout.csv",formatter
 survey,question_list,demo/ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 # Add the completed responses to the various templates
 # These take a long time to import so only import those we really need
-#survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
 #survey,complete,demo/ADAT/Padang Earthquake 2011 (72H B).csv,complete.xsl
 #survey,complete,demo/ADAT/Padang Earthquake 2011 (PMI).csv,complete.xsl
+# These fail & gives a consequent transaction error on PostgreSQL
+#survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
 #survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
 survey,complete,24H-TL-Data.csv,complete.xsl
 # END -------------------------------------------------------------------------
