--- a/private/prepopulate/regression/inv-mngt/tasks.cfg
+++ b/private/prepopulate/regression/inv-mngt/tasks.cfg
@@ -29,5 +29,13 @@ hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
 hrm,person,people.csv,person.xsl
 # Inventory
 inv,inv_item,inv_item.csv,inv_item.xsl
-inv,track_item,track_item.csv,track_item.xsl
+# Requests
+req,req,req_req.csv,req.xsl
+req,req_item,req_item.csv,req_item.xsl
+# The order in which the items are shiped is important
+# so do not try to change the order or merge the following track_item files
+inv,track_item,track_item1.csv,track_item.xsl
+inv,track_item,track_item2.csv,track_item.xsl
+inv,track_item,track_item3.csv,track_item.xsl
+inv,track_item,track_item4.csv,track_item.xsl
 # END -------------------------------------------------------------------------
