--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -92,7 +92,8 @@ inv,inv_item,inv_item.csv,inv_item.xsl
 inv,track_item,demo/Shipment/track_item.csv,track_item.xsl
 # Projects
 project,project,project_project.csv,project.xsl
-project,activity,project_activity.csv,activity.xsl
+project,community,project_community.csv,community.xsl
+#project,activity,project_activity.csv,activity.xsl
 project,organisation,project_organisation.csv,organisation.xsl
 # Events
 irs,ireport,ireport.csv,ireport.xsl
