Progress with Map: Layer Properties & Filter dialog. Start allowing end-users to create layers (no menu entry yet). Fix role_required autocomplete. Complete dataset for Sucos Theme Layer, showing the need to resolve performance issues with so many vectors displayed (either move to WMS as-per original plan or else aggregate by Lx at lower zooms)

--- a/static/scripts/tools/sahana.js.cfg
+++ b/static/scripts/tools/sahana.js.cfg
@@ -32,6 +32,7 @@ S3/s3.locationselector.widget.js
 S3/s3.checkboxes.widget.js
 S3/s3.msg.js
 S3/s3.rolesets.js
+S3/s3.search.js
 S3/s3.supply.js
 S3/ui.multiselect.js
 
