--- a/static/scripts/tools/sahana.js.cfg
+++ b/static/scripts/tools/sahana.js.cfg
@@ -27,6 +27,7 @@ S3/jquery.ui.draggable.js
 S3/jquery.ui.droppable.js
 S3/jquery.ui.accordion.js
 S3/jquery.ui.dialog.js
+S3/jquery.ui.slider.js
 S3/S3.js
 S3/s3.locationselector.widget.js
 S3/s3.checkboxes.widget.js
