added warehouse prepop in RGIMS and add auth_roles

--- a/private/prepopulate/demo/RGIMS/tasks.cfg
+++ b/private/prepopulate/demo/RGIMS/tasks.cfg
@@ -14,7 +14,7 @@
 #     s3Tools::S3BulkImporter
 ##########################################################################
 # Roles
-*,import_role,demo/IFRC/auth_roles.csv
+*,import_role,auth_roles.csv
 # -----------------------------------------------------------------------------
 # Users
 auth,user,regression/masterUsers.csv,user.xsl
@@ -75,7 +75,7 @@ project,theme,demo/IFRC/project_theme.csv,theme.xsl
 project,beneficiary_type,demo/IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
 # Offices
-org,office,office.csv,office.xsl
+org,office,warehouse.csv,office.xsl
 # Assets
 #asset,asset,asset.csv,asset.xsl
 # Human Resources
