--- a/private/prepopulate/demo/RGIMS/tasks.cfg
+++ b/private/prepopulate/demo/RGIMS/tasks.cfg
@@ -75,7 +75,7 @@ project,theme,demo/IFRC/project_theme.csv,theme.xsl
 project,beneficiary_type,demo/IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
 # Offices
-org,office,warehouse.csv,office.xsl
+#org,office,office.csv,office.xsl
 # Assets
 #asset,asset,asset.csv,asset.xsl
 # Human Resources
@@ -84,7 +84,8 @@ org,office,warehouse.csv,office.xsl
 #hrm,person,people.csv,person.xsl
 #hrm,training,training.csv,training.xsl
 # Inventory
-#inv,inv_item,inv_item.csv,inv_item.xsl
+org,office,warehouse.csv,office.xsl
+inv,inv_item,warehouse_stock.csv,inv_item.xsl
 # Requests
 #req,req,regression/inv-mngt/req_req.csv,req.xsl
 #req,req_item,regression/inv-mngt/req_item.csv,req_item.xsl
