--- a/private/prepopulate/demo/NYC/tasks.cfg
+++ b/private/prepopulate/demo/NYC/tasks.cfg
@@ -22,45 +22,41 @@ auth,user,users.csv,user.xsl
 # -----------------------------------------------------------------------------
 # Org
 org,organisation,organisation.csv,organisation.xsl
-auth,organisation,organisation.csv,organisation.xsl
+#auth,organisation,organisation.csv,organisation.xsl
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
 #  Markers
-gis,marker,gis_marker.csv,marker.xsl
+gis,marker,default/gis_marker.csv,marker.xsl
 #  Symbology
-gis,symbology,gis_symbology.csv,symbology.xsl
+gis,symbology,default/gis_symbology.csv,symbology.xsl
 # GIS Locations
-gis,location,TL_L0.csv,location.xsl
+gis,location,demo/IFRC/TL_L0.csv,location.xsl
 # GIS Config (refers to Locations)
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
-gis,location,TL_L1.csv,location.xsl
-gis,location,TL_L2.csv,location.xsl
-gis,location,TL_L3.csv,location.xsl
+gis,location,demo/IFRC/TL_L1.csv,location.xsl
+gis,location,demo/IFRC/TL_L2.csv,location.xsl
+gis,location,demo/IFRC/TL_L3.csv,location.xsl
 # Layers
-gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
-gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
-gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
+gis,layer_config,default/gis_layer_feature.csv,layer_feature.xsl
+gis,layer_symbology,default/gis_layer_feature.csv,layer_feature.xsl
+gis,layer_config,demo/IFRC/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 gis,layer_config,default/gis_layer_bing.csv,layer_bing.xsl
-gis,layer_config,gis_layer_empty.csv,layer_empty.xsl
-gis,layer_config,gis_layer_google.csv,layer_google.xsl
+gis,layer_config,demo/IFRC/gis_layer_empty.csv,layer_empty.xsl
+gis,layer_config,demo/IFRC/gis_layer_google.csv,layer_google.xsl
 gis,layer_config,default/gis_layer_tms.csv,layer_tms.xsl
 gis,layer_config,default/gis_layer_wms.csv,layer_wms.xsl
-gis,layer_config,gis_layer_wms.csv,layer_wms.xsl
-gis,layer_config,gis_layer_wms.csv,layer_wms.xsl
-gis,layer_config,gis_layer_georss.csv,layer_georss.xsl
-gis,layer_symbology,gis_layer_georss.csv,layer_georss.xsl
-gis,layer_config,gis_layer_kml.csv,layer_kml.xsl
-gis,layer_symbology,gis_layer_kml.csv,layer_kml.xsl
+gis,layer_config,demo/IFRC/gis_layer_georss.csv,layer_georss.xsl
+gis,layer_symbology,demo/IFRC/gis_layer_georss.csv,layer_georss.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
-gis,layer_config,gis_layer_theme.csv,layer_theme.xsl
-gis,theme_data,gis_theme_data.csv,theme_data.xsl
+gis,layer_config,demo/IFRC_Train/gis_layer_wms.csv,layer_wms.xsl
+gis,layer_config,demo/IFRC_Train/gis_layer_theme.csv,layer_theme.xsl
+gis,theme_data,demo/IFRC_Train/gis_theme_data.csv,theme_data.xsl
 # -----------------------------------------------------------------------------
 # Offices
-org,office,office.csv,office.xsl
 org,office,office.csv,office.xsl
 # -----------------------------------------------------------------------------
 # Shelters
@@ -75,7 +71,7 @@ hrm,person,people.csv,person.xsl
 hrm,training,training.csv,training.xsl
 # -----------------------------------------------------------------------------
 # Members
-member,person,members.csv,person.xsl
+#member,person,members.csv,person.xsl
 # -----------------------------------------------------------------------------
 # Inventory
 inv,inv_item,inv_item.csv,inv_item.xsl
