Add coverage and nose-cov to buildout eggs.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,11 +14,16 @@ eggs =
     pyyaml
     nose
     django-nose
-    
+    coverage
+    nose-cov
+
 extra-paths =
     ${buildout:directory}/src
     ${buildout:directory}/
     ${buildout:directory}/src/e_cidadania
+    ${buildout:directory}/src/apps
+    ${buildout:directory}/src/core
+    ${buildout:directory}/src/extras
     
 [versions]
 django = 1.4
@@ -33,5 +38,6 @@ extra-paths = ${buildout:extra-paths}
 [python]
 recipe = zc.recipe.egg
 interpreter = python
+relative-paths = true
 eggs = ${buildout:eggs}
 extra-paths = ${buildout:extra-paths}
