--- a/private/prepopulate/demo/ADAT/tasks.cfg
+++ b/private/prepopulate/demo/ADAT/tasks.cfg
@@ -13,7 +13,6 @@
 #     s3Tools::S3BulkImporter
 ##########################################################################
 auth,user,regression/masterUsers.csv,user.xsl
-auth,user,survey_users.csv,user.xsl
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
@@ -28,7 +27,7 @@ gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 #  Layers
 gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 # -----------------------------------------------------------------------------
-*,import_role,survey_roles.csv
+*,import_role,demo/IFRC/auth_roles.csv
 # Add the survey templates
 survey,question_list,24B.xls.Question.csv,question_list.xsl,"{'Template Description':'Rapid field assessment form (B)','Complete Question':'Name of assessment team leader','Date Question':'Date of Assessment','Time Question':'Time of Assessment','Location Detail':['L0', 'L1', 'L2', 'L3', 'Lat', 'Lon'],'Priority Question':'24H-11'}"
 survey,question_list,72B.xls.Question.csv,question_list.xsl
