Security Management module

--- a/private/prepopulate/demo/Crisis/tasks.cfg
+++ b/private/prepopulate/demo/Crisis/tasks.cfg
@@ -25,6 +25,11 @@ auth,user,users.csv,user.xsl
 org,sector,demo/IFRC/org_sector.csv,sector.xsl
 org,organisation,organisation.csv,organisation.xsl
 #auth,organisation,organisation.csv,organisation.xsl
+org,facility_type,org_facility_type.csv,facility_type.xsl
+# -----------------------------------------------------------------------------
+# Security
+security,zone_type,security_zone_type.csv,zone_type.xsl
+security,staff_type,security_staff_type.csv,staff_type.xsl
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
@@ -45,6 +50,8 @@ gis,location,demo/IFRC/TL_L3.csv,location.xsl
 # Layers
 gis,layer_config,default/gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,default/gis_layer_feature.csv,layer_feature.xsl
+gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
+gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 gis,layer_config,default/gis_layer_bing.csv,layer_bing.xsl
 gis,layer_config,demo/IFRC/gis_layer_empty.csv,layer_empty.xsl
