--- a/private/prepopulate/demo/IFRC_Train/tasks.cfg
+++ b/private/prepopulate/demo/IFRC_Train/tasks.cfg
@@ -41,7 +41,7 @@ gis,hierarchy,demo/IFRC/gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
 gis,location,demo/IFRC/TL_L1.csv,location.xsl
 gis,location,demo/IFRC/TL_L2.csv,location.xsl
-gis,location,demo/IFRC/TL_L3.csv,location.xsl
+#gis,location,demo/IFRC/TL_L3.csv,location.xsl
 # Layers
 gis,layer_config,demo/IFRC/gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,demo/IFRC/gis_layer_feature.csv,layer_feature.xsl
@@ -58,8 +58,6 @@ gis,layer_symbology,demo/IFRC/gis_layer_georss.csv,layer_georss.xsl
 gis,layer_config,demo/IFRC/gis_layer_kml.csv,layer_kml.xsl
 gis,layer_symbology,demo/IFRC/gis_layer_kml.csv,layer_kml.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
-gis,layer_config,gis_layer_theme.csv,layer_theme.xsl
-gis,theme_data,gis_theme_data.csv,theme_data.xsl
 # -----------------------------------------------------------------------------
 # HRM
 #hrm,skill,demo/IFRC/SkillList.csv,skill.xsl
@@ -100,6 +98,7 @@ inv,track_item,regression/inv-mngt/track_item3.csv,track_item.xsl
 inv,track_item,regression/inv-mngt/track_item4.csv,track_item.xsl
 # Projects
 project,project,project_project.csv,project.xsl
+# Just the 1st record
 project,community,project_community.csv,community.xsl
 #project,activity,project_activity.csv,activity.xsl
 project,organisation,project_organisation.csv,organisation.xsl
@@ -139,5 +138,6 @@ survey,question_list,demo/ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 # These fail & gives a consequent transaction error on PostgreSQL
 #survey,complete,demo/ADAT/Padang Earthquake 2011 (24H B).csv,complete.xsl
 #survey,complete,demo/ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
+# Just the 1st record
 survey,complete,24H-TL-Data.csv,complete.xsl
 # END -------------------------------------------------------------------------
