Make buildout use e_cidadania.settings.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -35,7 +35,7 @@ django = 1.4
 recipe = djangorecipe
 eggs = ${buildout:eggs}
 project = src
-settings = e_cidadania.settings.defaults
+settings = e_cidadania.settings
 extra-paths = ${buildout:extra-paths}
 
 [python]
