--- a/private/templates/demo/Oxfam/tasks.cfg
+++ b/private/templates/demo/Oxfam/tasks.cfg
@@ -39,8 +39,8 @@ gis,symbology,default/gis_symbology.csv,symbology.xsl
 gis,config,default/gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # Layers
-gis,layer_config,default/gis_layer_feature.csv,layer_feature.xsl
-gis,layer_symbology,default/gis_layer_feature.csv,layer_feature.xsl
+gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
+gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
 #gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
 #gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
