Project Community renamed as Project Location (to cope with projects at National/L1 levels), New deployemnt_setting to use these as a primary Communities resource (defaults to these being just a way to map Projects), fix marker downloads, add missing proc controller

--- a/private/templates/Oxfam/tasks.cfg
+++ b/private/templates/Oxfam/tasks.cfg
@@ -30,8 +30,10 @@ auth,user,regression/masterUsers.csv,user.xsl
 gis,projection,default/gis_projection.csv,projection.xsl
 #  Markers
 gis,marker,default/gis_marker.csv,marker.xsl
+gis,marker,gis_marker.csv,marker.xsl
 #  Symbology
 gis,symbology,default/gis_symbology.csv,symbology.xsl
+#gis,symbology,gis_symbology.csv,symbology.xsl
 # GIS Locations
 #gis,location,Standard/USA_L0.csv,location.xsl
 #gis,location,Standard/USA_L1.csv,location.xsl
