--- a/private/templates/Oxfam/tasks.cfg
+++ b/private/templates/Oxfam/tasks.cfg
@@ -38,7 +38,7 @@ gis,symbology,default/gis_symbology.csv,symbology.xsl
 #gis,location,Standard/USA_L0.csv,location.xsl
 #gis,location,Standard/USA_L1.csv,location.xsl
 # GIS Config
-gis,config,default/gis_config.csv,config.xsl
+gis,config,gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # Layers
 gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
