Revert/fix en-gb lang & tasks.cfg

--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -85,14 +85,14 @@ asset,asset,asset.csv,asset.xsl
 # Human Resources
 hrm,skill,default/DefaultSkillList.csv,skill.xsl
 hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
-###hrm,person,people.csv,person.xsl
+hrm,person,people.csv,person.xsl
 # User accounts need Orgs too for Testing
 hrm,person,users.csv,person.xsl
 hrm,training,training.csv,training.xsl
 hrm,programme_hours,hrm_programme_hours.csv,programme_hours.xsl
 # Members
 member,membership_type,IFRC/membership_type.csv,membership_type.xsl
-###member,person,members.csv,person.xsl
+member,person,members.csv,person.xsl
 # Inventory
 inv,inv_item,inv_item.csv,inv_item.xsl
 # Requests
