--- a/private/templates/IFRC/tasks.cfg
+++ b/private/templates/IFRC/tasks.cfg
@@ -33,7 +33,7 @@ gis,symbology,gis_symbology.csv,symbology.xsl
 gis,location,TL_L0.csv,location.xsl
 # GIS Config (refers to Locations & Organisations)
 gis,config,gis_config.csv,config.xsl
-gis,hierarchy,gis_hierarchy.csv,hierarchy.xsl
+gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
 gis,location,TL_L1.csv,location.xsl
 gis,location,TL_L2.csv,location.xsl
