inv_warehouse split out to a separate resource, org_office types customisable in database

--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -23,6 +23,7 @@ auth,user,users.csv,user.xsl
 # Org
 org,sector,IFRC/org_sector.csv,sector.xsl
 org,organisation_type,default/organisation_type.csv,organisation_type.xsl
+org,office_type,default/office_type.csv,office_type.xsl
 org,organisation,IFRC/organisation.csv,organisation.xsl
 auth,organisation,IFRC/organisation.csv,organisation.xsl
 # -----------------------------------------------------------------------------
@@ -95,6 +96,8 @@ hrm,programme_hours,hrm_programme_hours.csv,programme_hours.xsl
 # Members
 member,membership_type,IFRC/membership_type.csv,membership_type.xsl
 member,person,members.csv,person.xsl
+# Warehouses
+inv,warehouse,warehouse.csv,warehouse.xsl
 # Inventory
 inv,inv_item,inv_item.csv,inv_item.xsl
 # Requests
