--- a/private/templates/default/tasks.cfg
+++ b/private/templates/default/tasks.cfg
@@ -39,6 +39,7 @@ cms,post,cms_post.csv,post.xsl
 # -----------------------------------------------------------------------------
 org,sector,org_sector.csv,sector.xsl
 org,organisation_type,organisation_type.csv,organisation_type.xsl
+org,office_type,office_type.csv,office_type.xsl
 supply,catalog_item,DefaultItems.csv,catalog_item.xsl
 supply,catalog_item,StandardItems.csv,catalog_item.xsl
 hrm,skill,DefaultSkillList.csv,skill.xsl
