Project Statuses are customisable, Tasks have a link represent

--- a/private/templates/Oxfam/tasks.cfg
+++ b/private/templates/Oxfam/tasks.cfg
@@ -52,4 +52,6 @@ gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 #gis,layer_config,IFRC/gis_layer_empty.csv,layer_empty.xsl
 gis,layer_config,default/gis_layer_google.csv,layer_google.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
+# Projects
+project,status,default/status.csv,status.xsl
 # END -------------------------------------------------------------------------
