--- a/private/templates/EUROSHA/tasks.cfg
+++ b/private/templates/EUROSHA/tasks.cfg
@@ -50,6 +50,7 @@ gis,layer_symbology,default/gis_layer_georss.csv,layer_georss.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
+project,status,status.csv,status.xsl
 project,activity_type,IFRC/project_activity_type.csv,activity_type.xsl
 project,hazard,IFRC/project_hazard.csv,hazard.xsl
 project,theme,IFRC/project_theme.csv,theme.xsl
