--- a/private/templates/IFRC/tasks.cfg
+++ b/private/templates/IFRC/tasks.cfg
@@ -96,6 +96,7 @@ survey,formatter,"ADAT/Emergency Damage and Needs.xls.Layout.csv",formatter.xsl
 survey,formatter,ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
+project,status,default/status.csv,status.xsl
 "project","activity_type",project_activity_type.csv,activity_type.xsl
 "project","hazard",project_hazard.csv,hazard.xsl
 "project","theme",project_theme.csv,theme.xsl
