--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -75,6 +75,7 @@ hrm,programme,IFRC/hrm_programme.csv,programme.xsl
 # Project Tool
 *,import_role,roles/project_roles.csv
 org,facility,facility.csv,facility.xsl
+project,status,default/status.csv,status.xsl
 project,activity_type,IFRC/project_activity_type.csv,activity_type.xsl
 project,hazard,IFRC/project_hazard.csv,hazard.xsl
 project,theme,IFRC/project_theme.csv,theme.xsl
