Fix #1155: CheckBox widget updates when Add XXX adds a new entry. Other fixes

--- a/private/templates/Oxfam/tasks.cfg
+++ b/private/templates/Oxfam/tasks.cfg
@@ -53,5 +53,5 @@ gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 gis,layer_config,default/gis_layer_google.csv,layer_google.xsl
 gis,layer_config,default/gis_layer_coordinate.csv,layer_coordinate.xsl
 # Projects
-project,status,default/status.csv,status.xsl
+project,status,default/project_status.csv,status.xsl
 # END -------------------------------------------------------------------------
