--- a/private/templates/RGIMS/tasks.cfg
+++ b/private/templates/RGIMS/tasks.cfg
@@ -98,6 +98,7 @@ inv,inv_item,warehouse_stock.csv,inv_item.xsl
 #inv,track_item,regression/inv-mngt/track_item3.csv,track_item.xsl
 #inv,track_item,regression/inv-mngt/track_item4.csv,track_item.xsl
 # Projects
+#project,status,default/project_status.csv,status.xsl
 #project,project,project_project.csv,project.xsl
 #project,community,project_community.csv,community.xsl
 #project,activity,project_activity.csv,activity.xsl
