--- a/private/templates/Crisis/tasks.cfg
+++ b/private/templates/Crisis/tasks.cfg
@@ -79,6 +79,7 @@ hrm,job_role,IFRC/job_role.csv,job_role.xsl
 # Project Tool
 #*,import_role,roles/project_roles.csv
 #org,facility,facility.csv,facility.xsl
+project,status,default/project_status.csv,status.xsl
 project,activity_type,IFRC/project_activity_type.csv,activity_type.xsl
 project,hazard,IFRC/project_hazard.csv,hazard.xsl
 project,theme,IFRC/project_theme.csv,theme.xsl
