#1163: Location menu selection filters resources, L1 data for EUROSHA countries, centralise locations prepop data

--- a/private/templates/RGIMS/tasks.cfg
+++ b/private/templates/RGIMS/tasks.cfg
@@ -34,16 +34,14 @@ gis,projection,default/gis_projection.csv,projection.xsl
 gis,marker,default/gis_marker.csv,marker.xsl
 #  Symbology
 gis,symbology,default/gis_symbology.csv,symbology.xsl
-# GIS Locations
-#gis,location,IFRC/TL_L0.csv,location.xsl
 # GIS Config (refers to Locations)
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
-gis,location,PH_L1.csv,location.xsl
-gis,location,PH_L2.csv,location.xsl
-gis,location,PH_L3.csv,location.xsl
-#gis,location,PH_L4.csv,location.xsl
+gis,location,locations/PH_L1.csv,location.xsl
+gis,location,locations/PH_L2.csv,location.xsl
+gis,location,locations/PH_L3.csv,location.xsl
+#gis,location,locations/PH_L4.csv,location.xsl
 # Layers
 gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
