--- a/private/templates/IFRC/tasks.cfg
+++ b/private/templates/IFRC/tasks.cfg
@@ -36,12 +36,12 @@ gis,location,TL_L0.csv,location.xsl
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
-gis,location,TL_L1.csv,location.xsl
-gis,location,TL_L2.csv,location.xsl
-gis,location,TL_L3.csv,location.xsl
-gis,location,RGIMS/PH_L1.csv,location.xsl
-gis,location,RGIMS/PH_L2.csv,location.xsl
-gis,location,RGIMS/PH_L3.csv,location.xsl
+gis,location,locations/TL_L1.csv,location.xsl
+gis,location,locations/TL_L2.csv,location.xsl
+gis,location,locations/TL_L3.csv,location.xsl
+gis,location,locations/PH_L1.csv,location.xsl
+gis,location,locations/PH_L2.csv,location.xsl
+gis,location,locations/PH_L3.csv,location.xsl
 #  Layers
 gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
