--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -40,12 +40,12 @@ gis,location,IFRC/TL_L0.csv,location.xsl
 gis,config,IFRC/gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
-gis,location,IFRC/TL_L1.csv,location.xsl
-gis,location,IFRC/TL_L2.csv,location.xsl
-#gis,location,IFRC/TL_L3.csv,location.xsl
-gis,location,RGIMS/PH_L1.csv,location.xsl
-gis,location,RGIMS/PH_L2.csv,location.xsl
-#gis,location,RGIMS/PH_L3.csv,location.xsl
+gis,location,locations/TL_L1.csv,location.xsl
+gis,location,locations/TL_L2.csv,location.xsl
+#gis,location,locations/TL_L3.csv,location.xsl
+gis,location,locations/PH_L1.csv,location.xsl
+gis,location,locations/PH_L2.csv,location.xsl
+#gis,location,locations/PH_L3.csv,location.xsl
 # Layers
 gis,layer_config,IFRC/gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,IFRC/gis_layer_feature.csv,layer_feature.xsl
