--- a/private/templates/Oxfam/tasks.cfg
+++ b/private/templates/Oxfam/tasks.cfg
@@ -37,8 +37,8 @@ gis,marker,gis_marker.csv,marker.xsl
 gis,symbology,default/gis_symbology.csv,symbology.xsl
 #gis,symbology,gis_symbology.csv,symbology.xsl
 # GIS Locations
-#gis,location,Standard/USA_L0.csv,location.xsl
-#gis,location,Standard/USA_L1.csv,location.xsl
+#gis,location,locations/USA_L0.csv,location.xsl
+#gis,location,locations/USA_L1.csv,location.xsl
 # GIS Config
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
