* Fix Human Resource & Member PrePop * Call s3_approve_user when admin creates a new user * Remove truncate on inv dataTable * Project: Include org field for Lead Org in main form * Merged s3aaa confirmation_email with welcome_email * Only display 2 year numbers in date * Fix S3FilterFieldChange * s3rest.py Fix error on http://127.0.0.1:8000/eden/org/organisation/read?organisation.name=Kiribati+Red+Cross+Society: AttributeError: 'list' object has no attribute 'first' self.record = self.resource._rows.first() -> self.record = self.resource._rows[0] * Display AnyTime date widget BELOW input * User Profile accessible to all users * Add pr_person component to list of tables to be owned by a person's user

--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -26,6 +26,8 @@ auth,organisation,IFRC/organisation.csv,organisation.xsl
 # Users
 auth,user,regression/masterUsers.csv,user.xsl
 auth,user,users.csv,user.xsl
+# Associate Users with Organisations
+hrm,person,users.csv,person.xsl
 # -----------------------------------------------------------------------------
 # GIS
 #  Projections
@@ -40,12 +42,12 @@ gis,location,locations/TL_L0.csv,location.xsl
 gis,config,IFRC/gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 # GIS Locations
-gis,location,locations/TL_L1.csv,location.xsl
-gis,location,locations/TL_L2.csv,location.xsl
-#gis,location,locations/TL_L3.csv,location.xsl
-gis,location,locations/PH_L1.csv,location.xsl
-gis,location,locations/PH_L2.csv,location.xsl
-#gis,location,locations/PH_L3.csv,location.xsl
+#gis,location,locations/TL_L1.csv,location.xsl
+#gis,location,locations/TL_L2.csv,location.xsl
+##gis,location,locations/TL_L3.csv,location.xsl
+#gis,location,locations/PH_L1.csv,location.xsl
+#gis,location,locations/PH_L2.csv,location.xsl
+##gis,location,locations/PH_L3.csv,location.xsl
 # Layers
 gis,layer_config,IFRC/gis_layer_feature.csv,layer_feature.xsl
 gis,layer_symbology,IFRC/gis_layer_feature.csv,layer_feature.xsl
@@ -75,13 +77,10 @@ hrm,job_title,IFRC/job_title.csv,job_title.xsl
 hrm,programme,IFRC/hrm_programme.csv,programme.xsl
 hrm,person,staff.csv,person.xsl,"{'Type':'Staff'}"
 hrm,person,volunteers.csv,person.xsl,"{'Type':'Volunteer'}"
-# Associate Users with Organisations (not working)
-hrm,person,users.csv,person.xsl
 hrm,training,training.csv,training.xsl
 hrm,programme_hours,hrm_programme_hours.csv,programme_hours.xsl
 # -----------------------------------------------------------------------------
 # Project Tool
-*,import_role,roles/project_roles.csv
 org,facility,facility.csv,facility.xsl
 project,status,default/project_status.csv,status.xsl
 project,activity_type,IFRC/project_activity_type.csv,activity_type.xsl
@@ -116,7 +115,7 @@ project,project,project_project.csv,project.xsl
 project,location,project_location.csv,location.xsl
 project,organisation,project_organisation.csv,organisation.xsl
 # Events
-irs,ireport,ireport.csv,ireport.xsl
+#irs,ireport,ireport.csv,ireport.xsl
 # -----------------------------------------------------------------------------
 # ADAT
 # Add the survey templates
