Hospitals: fix HAVE export URL, add support for Importing Power & Reopening Date; remove deprecated formats.html

--- a/private/templates/Sandy/tasks.cfg
+++ b/private/templates/Sandy/tasks.cfg
@@ -13,6 +13,8 @@
 #     zzz_1st_run
 #     s3Tools::S3BulkImporter
 ##########################################################################
+# Users
+auth,user,regression/masterUsers.csv,user.xsl
 # GIS
 #  Projections
 gis,projection,default/gis_projection.csv,projection.xsl
