ARC wants CR features layer

--- a/private/templates/ARC/tasks.cfg
+++ b/private/templates/ARC/tasks.cfg
@@ -40,8 +40,8 @@ gis,location,locations/US_L1.csv,location.xsl
 gis,config,gis_config.csv,config.xsl
 gis,hierarchy,default/gis_hierarchy.csv,hierarchy.xsl
 #  Layers
-gis,layer_config,IFRC/gis_layer_feature.csv,layer_feature.xsl
-gis,layer_symbology,IFRC/gis_layer_feature.csv,layer_feature.xsl
+gis,layer_config,gis_layer_feature.csv,layer_feature.xsl
+gis,layer_symbology,gis_layer_feature.csv,layer_feature.xsl
 gis,layer_config,default/gis_layer_openstreetmap.csv,layer_openstreetmap.xsl
 gis,layer_config,default/gis_layer_openweathermap.csv,layer_openweathermap.xsl
 gis,layer_config,default/gis_layer_bing.csv,layer_bing.xsl
