Reqs & Facilities have Search & Report methods. HelpNY: Facility Types, custom menu & icons

--- a/private/templates/HelpNY/tasks.cfg
+++ b/private/templates/HelpNY/tasks.cfg
@@ -47,6 +47,7 @@ cms,post,default/cms_post.csv,post.xsl
 # -----------------------------------------------------------------------------
 org,sector,default/org_sector.csv,sector.xsl
 org,organisation_type,default/organisation_type.csv,organisation_type.xsl
+org,facility_type,facility_type.csv,facility_type.xsl
 org,office_type,default/office_type.csv,office_type.xsl
 supply,catalog_item,catalog_item.csv,catalog_item.xsl
 hrm,skill,SkillList.csv,skill.xsl
@@ -63,5 +64,5 @@ hrm,skill,SkillList.csv,skill.xsl
 #project,beneficiary_type,default/project_beneficiary_type.csv,beneficiary_type.xsl
 #cr,shelter_type,default/shelter_type.csv,shelter_type.xsl
 org,organisation,organisation.csv,organisation.xsl
-inv,warehouse,warehouse.csv,warehouse.xsl
+org,facility,facility.csv,facility.xsl
 # END -------------------------------------------------------------------------
