Sandy: req_skill import XSL & more prepop disable reqs part of Facility marker_fn until VF visible; cherrypick a couple of fixes from Michael

--- a/private/templates/SandyRelief/tasks.cfg
+++ b/private/templates/SandyRelief/tasks.cfg
@@ -68,4 +68,5 @@ org,organisation,organisation.csv,organisation.xsl
 org,facility,facility.csv,facility.xsl
 req,req,req.csv,req.xsl
 req,req_item,req_item.csv,req_item.xsl
+req,req_skill,req_skill.csv,req_skill.xsl
 # END -------------------------------------------------------------------------
