Sandy: Tweaks to labels & field visibility

--- a/private/templates/SandyRelief/tasks.cfg
+++ b/private/templates/SandyRelief/tasks.cfg
@@ -50,7 +50,7 @@ org,organisation_type,default/organisation_type.csv,organisation_type.xsl
 org,facility_type,facility_type.csv,facility_type.xsl
 org,office_type,default/office_type.csv,office_type.xsl
 supply,catalog_item,catalog_item.csv,catalog_item.xsl
-req,summary_option,req_summary_option.csv,summary_option.xsl
+#req,summary_option,req_summary_option.csv,summary_option.xsl
 hrm,skill,hrm_skill.csv,skill.xsl
 ##hrm,skill,default/DrivingSkillList.csv,skill.xsl
 ##hrm,skill,default/LanguageSkillList.csv,skill.xsl
