Sandy Req uses commit & req_ref and uses DIV-based forms

--- a/private/templates/SandyRelief/css.cfg
+++ b/private/templates/SandyRelief/css.cfg
@@ -5,6 +5,7 @@
 ../themes/default/footer.css
 ../themes/default/menu.css
 ../themes/default/widgets.css
+../themes/SandyRelief/widgets.css
 ../themes/default/shortcut.css
 ../themes/default/style.css
 ../themes/default/homepage.css
